--- a/Register.css
+++ b/Register.css
@@ -1,185 +1,223 @@
 
 body {
     color: #111111;
-    background-image: url(/src/allpages/auth/authimages/s113.jpg);
-    background-position: center; /* add this line */
-    background-size: cover; /* optional, to cover the entire background */
-
+    background-image: url('src/pages/auth/authimages/1349415.jpeg');
+    /* background-image: url(/src/allpages/auth/authimages/s113.jpg); */
+    background-position: center;
+    background-size: cover;
   }
-.wrapper {
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.container {
-  position: relative;
-  width: 100%;
-  max-width: 600px;
-  height: auto;
-  display: flex;
-  background-color: rgba(255, 249, 249, 0.4);
-  /* background-color: transparent; */
-  box-shadow: 0 0 15px rgba(0, 0, 0, .1);
-}
-
-.credit {
-  position: relative;
-  margin: 25px auto 0 auto;
-  width: 100%;
-  text-align: center;
-  color: #666666;
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.credit a {
-  color: #020202;
-  font-size: 16px;
-  font-weight: 600;
-}
-
-/* * * * * Login Form CSS * * * * */
-h2 {
-  margin: 0 0 15px 0;
-  font-size: 30px;
-  font-weight: 700;
-  color: #000000;
-}
-
-h2 img {
-  width: 120px;
-}
-
-p {
-  margin: 0 0 20px 0;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 22px;
-}
-
-.btn {
-  display: inline-block;
-  padding: 7px 20px;
-  font-size: 16px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  border-radius: 5px;
-  color: #ffffff;
-  outline: none;
-  border: 1px solid #ffffff;
-  transition: .3s;
-  -webkit-transition: .3s;
-}
-
-.btn:hover {
-  color: #222222;
-  background: #ffffff;
-}
-
-.col-left,
-.col-right {
-  width: 100%;
-  padding: 45px 35px;
-  display: flex;
-}
-
-.col-left {
-  width: 100%;
-  background-color: rgba(17, 17, 17, 0.4);
-
-  -webkit-clip-path: polygon(98% 17%, 100% 34%, 98% 51%, 100% 68%, 98% 84%, 100% 100%, 0 100%, 0 0, 100% 0);
-  clip-path: polygon(98% 17%, 100% 34%, 98% 51%, 100% 68%, 98% 84%, 100% 100%, 0 100%, 0 0, 100% 0);
-}
-
-@media(max-width: 575.98px) {
-  .container {
+  
+  .wrapper {
+    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    box-shadow: none;
   }
-
+  
+  .container {
+    position: relative;
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    display: flex;
+    background-color: rgba(255, 249, 249, 0.4);
+    box-shadow: 0 0 15px rgba(0, 0, 0, .1);
+  }
+  
+  .credit {
+    position: relative;
+    margin: 25px auto 0 auto;
+    width: 100%;
+    text-align: center;
+    color: #666666;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  
+  .credit a {
+    color: #020202;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  
+  h2 {
+    margin: 0 0 15px 0;
+    font-size: 30px;
+    font-weight: 700;
+    color: #000000;
+  }
+  
+  h2 img {
+    width: 120px;
+  }
+  
+  p {
+    margin: 0 0 20px 0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+  }
+  
+  .btn {
+    display: inline-block;
+    padding: 7px 20px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-decoration: none;
+    border-radius: 5px;
+    color: #ffffff;
+    outline: none;
+    border: 1px solid #ffffff;
+    transition: .3s;
+    -webkit-transition: .3s;
+  }
+  
+  .btn:hover {
+    color: #222222;
+    background: #ffffff;
+  }
+  
   .col-left,
   .col-right {
-    width: 100%;
-    margin: 0;
-    padding: 30px;
-    -webkit-clip-path: none;
-    clip-path: none;
+    width: 50%;
+    padding: 45px 35px;
+    display: flex;
   }
-}
-
-.login-text {
-  position: relative;
-  width: 100%;
-  color: #ffffff;
-  text-align: center;
-}
-
-.login-form {
-  position: relative;
-  width: 100%;
-  color: #666666;
-}
-
-.login-form p:last-child {
-  margin: 0;
-}
-
-.login-form p a {
-  color: #222222;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.login-form p:last-child a:last-child {
-  float: right;
-}
-
-.login-form label {
-  display: block;
-  width: 100%;
-  margin-bottom: 2px;
-  letter-spacing: .5px;
-}
-
-.login-form p:last-child label {
-  width: 60%;
-  float: left;
-}
-
-.login-form label span {
-  color: #ff574e;
-  padding-left: 2px;
-}
-
-.login-form input {
-  display: block;
-  width: 100%;
-  height: 40px;
-  padding: 0 10px;
-  font-size: 16px;
-  letter-spacing: 1px;
-  outline: none;
-  border: 1px solid #000000;
-  border-radius: 5px;
-}
-
-.login-form input:focus {
-  border-color: #ff574e;
-}
-
-.login-form input.btn {
-  color: #ffffff;
-  background: #383838;
-  border-color: #313131;
-  outline: none;
-  cursor: pointer;
-}
-
-.login-form input.btn:hover {
-  color: #2c2c2c;
-  background: #ffffff;
-}
+  
+  .col-left {
+    background-color: rgba(17, 17, 17, 0.4);
+    -webkit-clip-path: polygon(98% 17%, 100% 34%, 98% 51%, 100% 68%, 98% 84%, 100% 100%, 0 100%, 0 0, 100% 0);
+    clip-path: polygon(98% 17%, 100% 34%, 98% 51%, 100% 68%, 98% 84%, 100% 100%, 0 100%, 0 0, 100% 0);
+  }
+  
+  @media(max-width: 767.98px) {
+    .container {
+      flex-direction: column;
+      box-shadow: none;
+    }
+  
+    .col-left,
+    .col-right {
+      width: 92%;
+      margin: 0;
+      padding: 20px;
+      -webkit-clip-path: none;
+      clip-path: none;
+    }
+  
+    h2 {
+      font-size: 24px;
+    }
+  
+    p {
+      font-size: 14px;
+    }
+  
+    .btn {
+      font-size: 14px;
+      padding: 5px 15px;
+    }
+  
+    .login-form input {
+      height: 35px;
+      font-size: 14px;
+    }
+  }
+  
+  .login-text {
+    position: relative;
+    width: 100%;
+    color: #ffffff;
+    text-align: center;
+  }
+  
+  .login-form {
+    position: relative;
+    width: 100%;
+    color: #666666;
+  }
+  
+  .login-form p:last-child {
+    margin: 0;
+  }
+  
+  .login-form p a {
+    color: #222222;
+    font-size: 14px;
+    text-decoration: none;
+  }
+  
+  .login-form p:last-child a:last-child {
+    float: right;
+  }
+  
+  .login-form label {
+    display: block;
+    width: 100%;
+    margin-bottom: 2px;
+    letter-spacing: .5px;
+  }
+  
+  .login-form p:last-child label {
+    width: 60%;
+    float: left;
+  }
+  
+  .login-form label span {
+    color: #ff574e;
+    padding-left: 2px;
+  }
+  
+  .login-form input {
+    display: block;
+    width: 90%;
+    height: 40px;
+    padding: 0 10px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    outline: none;
+    border: 1px solid #000000;
+    border-radius: 5px;
+  }
+  
+  .login-form input:focus {
+    border-color: #ff574e;
+  }
+  
+  .login-form input.btn {
+    color: #181818;
+    background: #383838;
+    border-color: #313131;
+    outline: none;
+    cursor: pointer;
+  }
+  
+  .login-form input.btn:hover {
+    color: #2c2c2c;
+    background: #ffffff;
+  }
+  
+  @media (max-width: 575.98px) {
+    .container {
+      flex-direction: column;
+      box-shadow: none;
+    }
+  
+    .col-left,
+    .col-right {
+      width: 91%;
+      margin: 0;
+      padding: 14px;
+      -webkit-clip-path: none;
+      clip-path: none;
+    }
+  
+    .login-form input {
+      height: 30px;
+      font-size: 14px;
+      padding: 0 8px;
+    }
+  }
+  
